# django-lexicon

./: .dockerignore  .gitignore  CeleryDockerfile  Dockerfile  README.md  import_kovol_data.py  import_kuyu_data.py  pyproject.toml  requirements.txt  todo.md
.github/workflows/: docker.yml
apps/docs/: tests.py  urls.py  views.py
apps/docs/markdown/: 01_About.md  01_Registering.md  02_Starting a project.md  03_Getting permission to edit a project.md  05_Importing data.md  05_Lexicon entries.md  05_Variations.md  06_Check and review system.md  07_Ignore words.md  08_Search.md  09_Advanced search.md  20_Project admin.md  21_Affixes and automatic conjugations.md  22_Writing hunspell rules.md  23_Paradigms.md  24_Character restrictions.md  30_Exporting data.md  30_Paradigms.md  31_Libre office spellcheck.md  32_Paratext spellcheck.md  33_Microsoft Word spellcheck.md  41_Backups.md  42_Running offline.md  43_Contributing.md
apps/feedback/: admin.py  forms.py  models.py  tests.py  urls.py  views.py
apps/feedback/migrations/: 0001_initial.py  0002_feedback_handled_alter_feedback_name_and_more.py  0003_alter_feedback_type.py
apps/lexicon/: admin.py  apps.py  forms.py  models.py  permissions.py  project_import_export.py  signals.py  tasks.py  urls.py  views.py
apps/lexicon/migrations/: 0001_initial.py  0002_ignoreword_lexiconproject_secondary_language_and_more.py  0002_remove_lexiconentry_unique_text_per_project_and_more.py  0003_alter_lexiconproject_options.py  0007_paradigm.py  (+18 more)
config/: celery.py  global_context.py  settings.py  signals.py  test_settings.py  urls.py  views.py
config/settings/: __init__.py  base.py  dev.py  prod.py  test_settings.py
config/tests/: test_auth.py  test_views.py
docker/: .dockerignore  .env-example  CeleryDockerfile.dev  CeleryDockerfile.prod  Dockerfile  Dockerfile.dev  Dockerfile.prod  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.yml
static/css/: lexicon-style.css
templates/: 403.html  404.html  500.html  base.html  home.html  login.html  to_do.html
templates/django_registration/: activate.html  activation_complete.html  activation_email.txt  activation_email_body.txt  activation_email_subject.txt  activation_form.html  registration_closed.html  registration_complete.html  registration_form.html
templates/includes/: header.html  login_dropdown.html  project_header.html
templates/registration/: login.html  password_reset_complete.html  password_reset_confirm.html  password_reset_done.html  password_reset_email.html  password_reset_form.html  password_reset_subject.txt
(+100 files in other folders)
