[project]
name = "lexicon"
version = "0.18"
description = "A django app for hosting multiple minority language lexions"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "celery>=5.4.0",
    "crispy-bootstrap5>=2024.10",
    "django>=5.1.3",
    "gunicorn>=23.0.0",
    "psycopg2-binary>=2.9.10",
    "redis>=5.2.0",
    "sentry-sdk>=2.28.0",
    "toml>=0.10.2",
    "whitenoise>=6.8.2",
]
