[project]
name = "lexicon"
version = "0.18"
description = "A django app for hosting multiple minority language lexions"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "celery>=5.4.0",
    "crispy-bootstrap5>=2024.10",
    "django-guardian>=3.0.3",
    "django>=5.1.3",
    "gunicorn>=23.0.0",
    "psycopg2-binary>=2.9.10",
    "pytest-cov>=6.2.1",
    "pytest-django>=4.11.1",
    "redis>=5.2.0",
    "sentry-sdk>=2.28.0",
    "toml>=0.10.2",
    "whitenoise>=6.8.2",
]

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "config.settings.test_settings"
python_files = ["tests.py", "test_*.py", "*_tests.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--strict-markers",
    "--strict-config",
    "--reuse-db",
]
markers = [
    "slow: marks tests as slow",
    "integration: marks tests as integration tests",
]
log_cli_level = "CRITICAL"

[tool.coverage.run]
source = ["."]
omit = [
    ".venv/*",
    "*/migrations/*",
    "*/tests/*",
    "config/*",
    "manage.py",
    "*__init__.py",
    "*/admin.py",
    "*/apps.py",
]

[tool.coverage.report]
show_missing = true

[tool.coverage.html]
directory = "htmlcov"
